GNOME Bugzilla – Bug 790165
memory leak of a static mutex when adding/removing ports
Last modified: 2019-02-22 06:01:35 UTC
See commit.
Created attachment 363339 [details] [review] free GStaticMutex in AddRemoveData
Comment on attachment 363339 [details] [review] free GStaticMutex in AddRemoveData Merged!