free GStaticMutex in AddRemoveData

Fixes a memory leak reported by valgrind

 128 bytes in 16 blocks are definitely lost in loss record 6,923 of 7,784
    at 0x4C2CE5F: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
    by 0x7AEAEB8: g_malloc (gmem.c:94)
    by 0x7B02A25: g_slice_alloc (gslice.c:1025)
    by 0x7AB6D9A: g_mutex_new (gthread-deprecated.c:1461)
    by 0x7AB70B4: g_static_mutex_get_mutex_impl (gthread-deprecated.c:524)
    by 0xBE6E74F: ??? (in /usr/lib/libgupnp-igd-1.0.so.4.2.0)
    by 0x7AE5784: g_main_dispatch (gmain.c:3182)
    by 0x7AE5784: g_main_context_dispatch (gmain.c:3847)
    by 0x7AE5B4F: g_main_context_iterate.isra.30 (gmain.c:3920)
    by 0x7AE5E61: g_main_loop_run (gmain.c:4116)
    by 0xBE6ED7D: ??? (in /usr/lib/libgupnp-igd-1.0.so.4.2.0)
    by 0x7B0D2A4: g_thread_proxy (gthread.c:784)
    by 0x8028089: start_thread (in /usr/lib/libpthread-2.26.so)
    by 0x833524E: clone (in /usr/lib/libc-2.26.so)

https://bugzilla.gnome.org/show_bug.cgi?id=790165